--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "packageManager": "pnpm@10.25.0",
   "dependencies": {
     "express": "^5.2.1",
-    "expressjs": "^1.0.1"
+    "expressjs": "^1.0.1",
+    "socket.io": "^4.8.3"
   }
 }
