--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -14,3 +14,8 @@ RUN chown -R web:webgroup /app
 
 USER web
 
+FROM nginx:1.25-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
