--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -15,7 +15,7 @@ RUN chown -R web:webgroup /app
 USER web
 
 FROM nginx:1.25-alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
