--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,8 +10,10 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    paths:
-      - 'web/**'
+
+    defaults:
+      run:
+        working-directory: web
 
     steps:
       - name: Checkout code
@@ -21,13 +23,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
 
       - name: Run ESLint
-        run: npm run lint
+        run: pnpm run lint
 
 
   deploy:
