fix: :globe_with_meridians: Edit nginx.conf

--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -11,26 +11,27 @@ http {
         server_name _;
 
         location /api/ {
-            proxy_pass http://api:3001/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /socket.io/ {
-            proxy_pass http://api:3001/socket.io/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+              proxy_pass https://louis-realtime-room-api.onrender.com/;
+              proxy_http_version 1.1;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection 'upgrade';
+              proxy_set_header Host $host;
+              proxy_cache_bypass $http_upgrade;
+              proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+              proxy_next_upstream_tries 3;
+              proxy_connect_timeout 3s;
+              proxy_read_timeout 5s;
+              error_page 502 503 504 = /api-unavailable.html;
         }
 
         location / {
             root   /usr/share/nginx/html;
             try_files $uri /index.html;
         }
+            location = /api-unavailable.html {
+                internal;
+                default_type text/html;
+                return 200 '<html><body><h1>API temporarily unavailable. Please try again in a moment.</h1></body></html>';
+            }
     }
 }
