--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,8 +14,6 @@ jobs:
        
       - name: Install pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 10
       
       - name: Install dependencies
         run: pnpm install
@@ -27,7 +25,9 @@ jobs:
         run: pnpm --filter frontend run build
       
       - name: Check API
-        run: pnpm --filter backend run start
+        run: |
+          cd api
+          node -c index.js
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
