--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
         run: pnpm --filter frontend run build
       
       - name: Check API
-        run: pnpm --filter backend run start
+        run: timeout 15s pnpm --filter backend run start
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
