ci: :construction_worker: Edit Dockerfile to be .env compliant

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# API Configuration
-API_URL=http://localhost:3001
-
-# Web Configuration
+# Local Development
+VITE_API_URL=http://localhost:3001
 WEB_URL=http://localhost:5173
+
+# Production (Render) - Set these in Render dashboard
+# VITE_API_URL=https://your-api-service.onrender.com
+# WEB_URL=https://your-web-service.onrender.com
