--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -6,32 +6,30 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    upstream api_backend {
+        server api:3001;
+    }
+
     server {
         listen 80;
         server_name _;
 
-        location /api/ {
-              proxy_pass https://louis-realtime-room-api.onrender.com/;
-              proxy_http_version 1.1;
-              proxy_set_header Upgrade $http_upgrade;
-              proxy_set_header Connection 'upgrade';
-              proxy_set_header Host $host;
-              proxy_cache_bypass $http_upgrade;
-              proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-              proxy_next_upstream_tries 3;
-              proxy_connect_timeout 3s;
-              proxy_read_timeout 5s;
-              error_page 502 503 504 = /api-unavailable.html;
+        # Proxy Socket.IO requests to API
+        location /socket.io/ {
+            proxy_pass http://api_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_cache_bypass $http_upgrade;
         }
 
+        # Serve frontend
         location / {
             root   /usr/share/nginx/html;
             try_files $uri /index.html;
         }
-            location = /api-unavailable.html {
-                internal;
-                default_type text/html;
-                return 200 '<html><body><h1>API temporarily unavailable. Please try again in a moment.</h1></body></html>';
-            }
     }
 }
