--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.25.0",
   "dependencies": {
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "expressjs": "^1.0.1",
     "socket.io": "^4.8.3"
