--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,23 @@
 
 services:
   - type: web
-    name: louis-realtime-room-web
-    runtime: docker
-    dockerfilePath: web/Dockerfile
-    dockerContext: ./web
-    plan: free
-
-  - type: web
     name: louis-realtime-room-api
     runtime: docker
     dockerfilePath: api/Dockerfile
     dockerContext: ./api
     plan: free
+    envVars:
+      - key: PORT
+        value: 3001
+      - key: WEB_URL
+        sync: false
+
+  - type: web
+    name: louis-realtime-room-web
+    runtime: docker
+    dockerfilePath: web/Dockerfile
+    dockerContext: ./web
+    plan: free
+    envVars:
+      - key: VITE_API_URL
+        sync: false
