--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,20 +2,33 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# Copy package files
+COPY package.json pnpm-lock.yaml ./
+
+# Install pnpm globally
+RUN npm install -g pnpm
+
+# Install dependencies
+RUN pnpm install --no-frozen-lockfile
+
+# Copy source files
 COPY . .
 
-RUN npm install -g pnpm && pnpm install
+# Build argument for API URL
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 
+# Build the application
 RUN pnpm run build
+
+FROM nginx:1.25-alpine
+
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/nginx.conf /etc/nginx/nginx.conf
 
 RUN addgroup --system --gid 1001 webgroup 
 RUN adduser --system --uid 1001 web
-RUN chown -R web:webgroup /app
+RUN chown -R web:webgroup /usr/share/nginx/html
 
-USER web
-
-FROM nginx:1.25-alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
-COPY --from=builder /app/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
