--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,10 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
     "sass": "^1.97.3",
-    "socket.io-client": "^4.8.3"
+    "socket.io-client": "^4.8.3",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.48.0",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
